# Tiled-MM

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
.github/workflows/: version_checker.yml
ci/: baseimage.cuda.Dockerfile  build.Dockerfile  cscs.yml  daint-alps.yml
cmake/: FindBLIS.cmake  FindCUBLAS.cmake  FindHIP.cmake  FindHIPLIBS.cmake  FindROCBLAS.cmake  Tiled-MMConfig.cmake.in
examples/: CMakeLists.txt  cublasXt-multiply.cpp  multiply.cpp
include/: CMakeLists.txt  options.cpp  options.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  cublas_handle.hpp  cuda_stream.hpp  device_vector.hpp  gpu_context.hpp  mm_handle.cpp  mm_handle.hpp  tiled_matrix.cpp  tiled_matrix.hpp  tiled_mm.cpp  tiled_mm.hpp  util.hpp  util_prof.hpp
src/Tiled-MM/: CMakeLists.txt  cuda_event.hpp  device_2d_buffer.hpp  device_2d_vector.hpp  device_buffer.hpp  device_event.hpp  device_vector.hpp  gpu_blas_handle.hpp  gpu_context.cpp  gpu_context.hpp  gpu_runtime_api.hpp  mm_handle.cpp  mm_handle.hpp  pinned_buffer.hpp  tile_dim.cpp  tile_dim.hpp  tiled_matrix.cpp  tiled_mm.cpp  tiled_mm.hpp  util.hpp
tests/: CMakeLists.txt  test-multiply.cpp
